# polymesh

./: CMakeLists.txt  Changelog.md  LICENSE  Readme.md
docs/: .gitignore  Doxyfile  Makefile  algorithms.rst  attributes.rst  conf.py  contributing.rst  cookbook.rst  faq.rst  getting-started.rst  index.rst  mesh-topology.rst  misc.rst  objects.rst  performance.rst  properties.rst  reference.rst  requirements.txt  roadmap.rst  serialization.rst  smart-ranges.rst  vector-math.rst
docs/_static/css/: custom.css
src/polymesh/: EdgeHandle.hh  EdgeIndex.hh  FaceHandle.hh  FaceIndex.hh  HalfEdgeHandle.hh  HalfEdgeIndex.hh  HalfedgeHandle.hh  HalfedgeIndex.hh  Iterators.hh  Mesh.cc  Mesh.hh  Ranges.hh  VertexHandle.hh  VertexIndex.hh  algorithms.cc  algorithms.hh  assert.cc  assert.hh  attribute_base.hh  attribute_collection.hh  attributes.hh  bind.hh  copy.hh  cursors.hh  debug.cc  debug.hh  fields.hh  formats.cc  formats.hh  fwd.hh  hash.hh  iterators.hh  low_level_api.hh  macros.hh  obj_writer.cc  obj_writer.hh  objects.hh  pm-std.hh  pm.hh  primitives.hh  (+6 more)
src/polymesh/algorithms/: barycoords.hh  cache-optimization.cc  cache-optimization.hh  components.cc  components.hh  decimate.hh  deduplicate.hh  delaunay.hh  edge_split.hh  fill_hole.hh  geodesic_fast_marching.hh  geodesic_nnf.hh  geodesic_nnf.impl.hh  interpolation.hh  iteration.hh  normal_estimation.hh  normalize.hh  operations.hh  optimization.cc  optimization.hh  properties.hh  sampling.hh  smoothing.hh  stats.hh  topology.hh  tracing.hh  triangulate.cc  triangulate.hh
src/polymesh/algorithms/geodesics/: fmm_linear.hh  gsf.hh  gsf.impl.hh
src/polymesh/algorithms/remeshing/: decimate.hh  delaunay.hh  triangulate.hh
src/polymesh/algorithms/repair/: deduplicate.hh
src/polymesh/algorithms/subdivision/: loop.hh  sqrt3.hh
src/polymesh/attributes/: fast_clear_attribute.hh  flags.hh  partitioning.hh  raw_attribute.hh
src/polymesh/data/: disjoint_set.hh  flags.hh  partitioning.hh
src/polymesh/detail/: AttributeSerializer.hh  delaunay.cc  delaunay.hh  math.hh  noop_function.hh  permutation.hh  primitive_set.hh  random.hh  split_vector.hh  topology_iterator.hh  union_find.hh  unique_array.hh  unique_ptr.hh
src/polymesh/ext/: attribute_collection.hh
src/polymesh/formats/: obj.cc  obj.hh  off.cc  off.hh  ply.cc  ply.hh  pm.cc  pm.hh  stl.cc  stl.hh
src/polymesh/impl/: impl_attributes.hh  impl_cursors.hh  impl_iterators.hh  impl_low_level_api_base.hh  impl_low_level_api_mutable.hh  impl_mesh.hh  impl_primitive.hh  impl_properties.hh  impl_ranges.hh
src/polymesh/objects/: cone.hh  cube.hh  cylinder.hh  dodecahedron.cc  dodecahedron.hh  ico_sphere.cc  ico_sphere.hh  quad.hh  uv_sphere.hh
src/polymesh/std/: hash.hh  io.hh  memory.hh
